--- a/src/test/resources/Config.Properties
+++ b/src/test/resources/Config.Properties
@@ -14,6 +14,7 @@ mouseOpeartionRightClick= http://swisnl.github.io/jQuery-contextMenu/demo.html
 JQeryTitle = jQuery contextMenu (2.x)
 mouseOpeartionRightclickCopyActionText = clicked: copy
 mouseOpeartionDoubleClick = https://api.jquery.com/dblclick/
+doubleClickTitle=.dblclick() | jQuery API Documentation
 mouseOperationDragAndDrop = https://jqueryui.com/droppable/
 RigtClickCopy =clicked: copy
 nxtgenaiacademyURL = https://nxtgenaiacademy.com/multiplewindows/
@@ -38,7 +39,7 @@ HobbiesMovies = Movies
 HobbiesHockey = Hockey
 RunMode = yes
 CalenderAndDropDownPage = https://demoqa.com/automation-practice-form
-TitleOfPracticeFormPage= ToolsQA
+TitleOfPracticeFormPage	= ToolsQA
 DOB_Month = March
 DOB_YY=1999
 DOB_DD=14
