--- a/src/test/resources/Config.Properties
+++ b/src/test/resources/Config.Properties
@@ -39,7 +39,7 @@ HobbiesMovies = Movies
 HobbiesHockey = Hockey
 RunMode = yes
 CalenderAndDropDownPage = https://demoqa.com/automation-practice-form
-TitleOfPracticeFormPage	= ToolsQA
+TitleOfPracticeFormPage	= DEMOQA
 DOB_Month = March
 DOB_YY=1999
 DOB_DD=14
